# openclaw-ci-defect-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  target.txt  zhixing.md
app/: __init__.py  assistant.py  audit.py  auth.py  cli.py  config.py  confirmation_store.py  executor.py  main.py  nlp.py  schemas.py  session_store.py
app/tools/: __init__.py  jenkins_tool.py  teambition_payload.py  teambition_tool.py
configs/: bug_fields.yaml  jobs.yaml  teambition.yaml  teambition_bug_form.v1.yaml  users.yaml
docs/: dingtalk-jenkins-flow.md  hermes-tool-router-prompt.md  openclaw-agent-prompt.md  openclaw-ci-assistant.openapi.json  openclaw-integration.md  openclaw-tool-router-prompt.md
hermes-dingtalk-bridge/: adapter.py  plugin.yaml
hermes-mcp/: package-lock.json  package.json
hermes-mcp/src/: index.ts
openclaw-plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json
openclaw-plugin/src/: index.test.ts  index.ts
release/: 交付说明.md
scripts/: build_teambition_payload_dry_run.py  call_ci_assistant.ps1  call_ci_assistant.py  ci_executor.py  extract_teambition_har.py  install-hermes-dingtalk-bridge.ps1  install.ps1  install.sh  save_teambition_cookie.py  submit_teambition_task_v2.py  test_dingtalk_flow.ps1  uninstall-hermes-dingtalk-bridge.ps1
tests/: test_bug_preview_reply.py
交接文档/: 2026-06-07-Codex-交接-钉钉CI链路.md  2026-06-09-Codex-交接-Teambition配置初版.md  2026-06-10-Codex-交接-OpenClaw稳定版.md  2026-06-10-Codex-交接-TB缺陷创建.md  2026-06-10-Codex-交接-TB缺陷收尾.md
(+3 files in other folders)
